--- a/README
+++ b/README
@@ -6,3 +6,9 @@ create column family USER_INDEX with comparator=UTF8Type and default_validation_
 create column family PREFERENCE;
 create column family EXTERNAL_LINK with comparator=UTF8Type and default_validation_class=UTF8Type and key_validation_class=UTF8Type and column_metadata=[{column_name: USER_ID, validation_class:UTF8Type, index_type: KEYS}];
 describe twitample;
+
+set USER['xamry'][ascii(personalDetail)][ascii(personal_detail_id)]='pd1';
+set USER['xamry'][ascii(personalDetail)][ascii(person_name)]='Amresh';    
+set USER['xamry'][ascii(personalDetail)][ascii(person_password)]='password1';
+set USER['xamry'][ascii(personalDetail)][ascii(rel_status)]='single';        
+
